finished? last touches

--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
                         <a href="#">home</a>
                     </li>
                     <li>
-                        <a href="#">about us</a>
+                        <a href="#about-us">about us</a>
                     </li>
                     <li>
-                        <a href="#">services</a>
+                        <a href="#services">services</a>
                     </li>
                     <li>
-                        <a href="#">projects</a>
+                        <a href="#projects">projects</a>
                     </li>
                     <li>
-                        <a href="#">blog</a>
+                        <a href="#blogs">blog</a>
                     </li>
                     <li>
                         <a href="#">shop</a>
@@ -178,7 +178,7 @@
         </div> <!--End of Banner-->
     </header>
     <main>
-        <article class="about-us">
+        <article class="about-us" id="about-us">
             <div class="wrapper">
                 <h3>we help</h3>
                 <div class="about-us-stuff">
@@ -206,73 +206,75 @@
                 </div>
             </div>
         </article>
-        <section class="services">
+        <section class="services" id="services">
             <div class="wrapper">
                 <div class="services-title">
                     <h3>What we provide</h3>
                     <h2>our services</h2>
                     <h6>s</h6>
                 </div>
-                <div class="half">
-                    <div class="third">
-                        <div class="service-icon">
-                            <img src="images/icons/2404044 - calendar date every day grid month schedule year.png" alt="calendar icon">
-                        </div>
-                        <div class="service-details">
-                            <h4>business growth</h4>
-                            <p>Helping you get the greatest strategic advantage from your data management environment.</p>
-                        </div>
-                    </div> <!-- End of 'thid' div-->
-                    <div class="third">
-                        <div class="service-icon">
-                            <img src="images/icons/2404067 - bookkeeping contract document grid paper pen treaty.png" alt="notebook icon">
-                        </div>
-                        <div class="service-details">
-                            <h4>sustainability</h4>
-                            <p>When it comes to sustainability & corporate responsibility, Complete with power and flexibility.</p>
-                        </div>
-                    </div> <!-- End of 'thid' div-->
-                    <div class="third">
-                        <div class="service-icon">
-                            <img src="images/icons/2404047 - business grid idea lamp light shine.png" alt="idea lamp icon">
-                        </div> 
-                        <div class="service-details">
-                            <h4>performance</h4>
-                            <p>Helping you get the greatest strategic advantage from your data management environemnt.</p>
-                        </div>
-                    </div> <!-- End of 'thid' div-->
-                </div>
-                <div class="half">
-                    <div class="third">
-                        <div class="service-icon">
-                            <img src="images/icons/2404051 - graph grid infographic line management statistics stats.png" alt="bar graph">
-                        </div>
-                        <div class="service-details">
-                            <h4>finance consulting</h4>
-                            <p>Finance consulting Helping you get the greatest strategic advanage from your data management</p>
-                        </div>
+                <div class="service-area">
+                    <div class="half">
+                        <div class="third">
+                            <div class="service-icon">
+                                <img src="images/icons/2404044 - calendar date every day grid month schedule year.png" alt="calendar icon">
+                            </div>
+                            <div class="service-details">
+                                <h4>business growth</h4>
+                                <p>Helping you get the greatest strategic advantage from your data management environment.</p>
+                            </div>
+                        </div> <!-- End of 'thid' div-->
+                        <div class="third">
+                            <div class="service-icon">
+                                <img src="images/icons/2404067 - bookkeeping contract document grid paper pen treaty.png" alt="notebook icon">
+                            </div>
+                            <div class="service-details">
+                                <h4>sustainability</h4>
+                                <p>When it comes to sustainability & corporate responsibility, Complete with power and flexibility.</p>
+                            </div>
+                        </div> <!-- End of 'thid' div-->
+                        <div class="third">
+                            <div class="service-icon">
+                                <img src="images/icons/2404047 - business grid idea lamp light shine.png" alt="idea lamp icon">
+                            </div> 
+                            <div class="service-details">
+                                <h4>performance</h4>
+                                <p>Helping you get the greatest strategic advantage from your data management environemnt.</p>
+                            </div>
+                        </div> <!-- End of 'thid' div-->
                     </div>
-                    <!-- End of 'thid' div-->
-                    <div class="third">
-                        <div class="service-icon">
-                            <img src="images/icons/2404065 - a arm get grid hand percent percentage.png" alt="hand icon with a percentage symbol">
+                    <div class="half">
+                        <div class="third">
+                            <div class="service-icon">
+                                <img src="images/icons/2404051 - graph grid infographic line management statistics stats.png" alt="bar graph">
+                            </div>
+                            <div class="service-details">
+                                <h4>finance consulting</h4>
+                                <p>Finance consulting Helping you get the greatest strategic advanage from your data management</p>
+                            </div>
                         </div>
-                        <div class="service-details">
-                            <h4>insurance consulting</h4>
-                            <p>Insurance consulting When it comes to sustainability & corporate responsibility, -bility,</p>
+                        <!-- End of 'thid' div-->
+                        <div class="third">
+                            <div class="service-icon">
+                                <img src="images/icons/2404065 - a arm get grid hand percent percentage.png" alt="hand icon with a percentage symbol">
+                            </div>
+                            <div class="service-details">
+                                <h4>insurance consulting</h4>
+                                <p>Insurance consulting When it comes to sustainability & corporate responsibility, -bility,</p>
+                            </div>
                         </div>
+                        <!-- End of 'thid' div-->
+                        <div class="third">
+                            <div class="service-icon">
+                                <img src="images/icons/2404045 - backpack bag briefcase business portfolio grid portfolio suitcase.png" alt="briefcase">
+                            </div>
+                            <div class="service-details">
+                                <h4>B2B consulting</h4>
+                                <p>B@B Helping you get the greatest strategic advanage from your data mangement environment.</p>
+                            </div>
+                        </div>
+                        <!-- End of 'thid' div-->
                     </div>
-                    <!-- End of 'thid' div-->
-                    <div class="third">
-                        <div class="service-icon">
-                            <img src="images/icons/2404045 - backpack bag briefcase business portfolio grid portfolio suitcase.png" alt="briefcase">
-                        </div>
-                        <div class="service-details">
-                            <h4>B2B consulting</h4>
-                            <p>B@B Helping you get the greatest strategic advanage from your data mangement environment.</p>
-                        </div>
-                    </div>
-                    <!-- End of 'thid' div-->
                 </div>
             </div>
         </section> <!-- End of 'services' section-->
@@ -353,7 +355,7 @@
                 </div>
             </div>
         </section>
-        <section class="projects">
+        <section class="projects" id="projects">
            <div class="wrapper">
                 <div class="projects-title">
                     <h3>What we done</h3>
@@ -393,7 +395,7 @@
                 </div>
             </div>
         </section>
-        <section class="news">
+        <section class="news" id="blogs">
             <div class="wrapper">
                 <div class="news-title">
                     <h3>from our blog</h3>
@@ -410,6 +412,9 @@
                 <div class="news-article">
                     <div class="third">
                         <div class="news-img">
+                            <div class="news-hover">
+                                <img src="images/icons/unlink 148995.png" alt="link icon">
+                            </div>
                             <img src="images/photos/rawpixel-com-296612.png" alt="Girl looking up from laptop">
                         </div>
                         <div class="news-content">
@@ -420,6 +425,9 @@
                     </div>
                     <div class="third">
                         <div class="news-img">
+                            <div class="news-hover">
+                                <img src="images/icons/unlink 148995.png" alt="link icon">
+                            </div>
                             <img src="images/photos/domenico-loia-272251.png" alt="Macs squared">
                         </div>
                         <div class="news-content">
@@ -430,7 +438,12 @@
                     </div>
                     <div class="third">
                         <div class="news-img">
-                            <img src="images/photos/rawpixel-com-252127.png" alt="two persons discussing in front of a laptop">
+                            <div class="news-hover">
+                                <img src="images/icons/unlink 148995.png" alt="link icon">
+                            </div>
+                            <div class="news-img-img">
+                                <img src="images/photos/rawpixel-com-252127.png" alt="two persons discussing in front of a laptop">
+                            </div>
                         </div>
                         <div class="news-content">
                             <h3>When a business can no longer meet the demands of its short/long term</h3>
@@ -578,11 +591,17 @@
     </footer>
     
     <!-- Font Awesome CDN -->
-    <script src="https://use.fontawesome.com/c0796f8a2a.js"></script>
-    <script>
-        $("hamburger").click(function () {
-            $(this).addClass("");
-        });
+        <script     src="https://use.fontawesome.com/c0796f8a2a.js"></script>
+    <!-- Jquery -->
+        <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+        <script>
+            $(function () {
+                $(".hamburger").on("click", function () {
+                    console.log('hamburger click');
+                    $(".page-nav .page-nav-menu").toggleClass("open");
+                });
+            });
     </script>
 </body>
 </html>
