--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Advisory</title>
-    <!-- Link to External CSS -->
-    <link rel="stylesheet" href="styles/style.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Poppins|Source+Sans+Pro" rel="stylesheet">
     <!-- animations -->
     <link rel="stylesheet" href="styles/animate.css">
+    <!-- Link to External CSS -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
@@ -595,13 +595,7 @@
     <!-- Jquery -->
         <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
-        <script>
-            $(function () {
-                $(".hamburger").on("click", function () {
-                    console.log('hamburger click');
-                    $(".page-nav .page-nav-menu").toggleClass("open");
-                });
-            });
-    </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.1.2/jquery.smooth-scroll.min.js"></script>
+        <script src="./script.js"></script>
 </body>
 </html>
